hphp/test/zend/bad/ext/date/tests/mktime-3-64bit.php.skipif
<?php echo PHP_INT_SIZE != 8 ? "skip 64-bit only" : "OK" ?>